Thrangu- add block of text section

--- a/modified/nunneries/thrangu.html
+++ b/modified/nunneries/thrangu.html
@@ -140,8 +140,29 @@ https://templatemo.com/tm-542-new-vision
                 </div>
 
                 <div class="row tm-welcome-row">
+                    <div class="tm-about">
 
+                        <div class="col-12 tm-media tm-media-v-center">
+                            <p> <strong>Help Tibetan Nuns, Inc.</strong> is a non-profit created by U.S. supporters
+                                of Thrangu Kong Jo
+                                Sherab Ling Nunnery, an affiliate of Thrangu Monastery in Kham, Eastern Tibet. This
+                                thriving Buddhist community houses over 100 nuns in Yushu, Qinghai, near the town of
+                                Jiegu. This area was hit by a major earthquake in 2010, killing about 2,700 people.
+                            </p>
+                        </div>
+                        <div class="col-12 tm-media tm-media-v-center">
+                            <!-- <i class="fas fa-5x fa-air-freshener tm-about-icon"></i> -->
+                            <div>
+                                <p>Resting on the Tibetan Plateau 12,000 feet above sea level, the nunnery consists of a
+                                    temple, a three-year-retreat building, a library and dining building, a large guest
+                                    house, and living facilities for the nuns. The nunnery is in a very remote area. The
+                                    nuns are poor and currently have no source of income other than what they are able
+                                    to obtain by begging and what their families provide.</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
+
 
                 <div class="row tm-welcome-row-2">
                     <div class="col-lg-4 tm-dotted-box-container">
