--- a/modified/nunneries/thrangu.html
+++ b/modified/nunneries/thrangu.html
@@ -165,79 +165,101 @@ https://templatemo.com/tm-542-new-vision
 
 
                 <div class="row tm-welcome-row-2">
-
-                </div>
-            </section>
-
-            <!-- Featured -->
-            <section class="tm-featured">
-                <div class="row">
-                    <div class="col-12">
-                        <h2 class="tm-section-header tm-section-header-small">Featured Carousel Items</h2>
+                    <div class="col-md-6">
+                        <div class="tm-about-1">
+                            <img src="../media/many-nuns-on-steps.jpeg" alt="Image" class="img-fluid mb-5">
+                            <p class="tm-article-text">
+                                Help Tibetan Nuns, Inc. has extended its activity to support additional nunneries in
+                                India, Bhutan, Nepal, and Tibet. In 2017 and 2018 we reached a high point in our
+                                giving when a generous donation enabled us to help over 500 nuns including children,
+                                young women, middle-aged nuns, and elders. These women found a spiritual home in the
+                                nunneries we help support.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="tm-about-1">
+                            <img src="../media/MonestaryRoof.jpeg" alt="Image" class="img-fluid mb-5">
+                            <p class="tm-article-text">
+                                Some of the funds went to healthcare, some to education,
+                                and some to the construction of housing facilities. In Bhutan we made a generous
+                                donation towards the building of a new shedra (university). In the future we plan to
+                                continue our outreach to include more nunneries in the Himalayan Region.
+                            </p>
+                        </div>
                     </div>
                 </div>
+    </div>
+    </section>
 
-                <!-- Carousel -->
-                <div class="grid tm-carousel">
-                    <figure class="effect-honey">
-                        <img src="img/gallery-item-01.jpg" alt="Featured Item">
-                        <figcaption>
-                            <h4><i><span>Best</span> HTML Template</i></h4>
-                        </figcaption>
-                    </figure>
-                    <figure class="effect-honey">
-                        <img src="img/gallery-item-02.jpg" alt="Featured Item">
-                        <figcaption>
-                            <h4><i><span>Top</span> CSS Theme</i></h4>
-                        </figcaption>
-                    </figure>
-                    <figure class="effect-honey">
-                        <img src="img/gallery-item-03.jpg" alt="Featured Item">
-                        <figcaption>
-                            <h4><i><span>Best</span> HTML Template</i></h4>
-                        </figcaption>
-                    </figure>
-                    <figure class="effect-honey">
-                        <img src="img/gallery-item-04.jpg" alt="Featured Item">
-                        <figcaption>
-                            <h4><i><span>Great</span> Web Theme</i></h4>
-                        </figcaption>
-                    </figure>
-                    <figure class="effect-honey">
-                        <img src="img/gallery-item-05.jpg" alt="Featured Item">
-                        <figcaption>
-                            <h4><i><span>Best</span> HTML Collection</i></h4>
-                        </figcaption>
-                    </figure>
-                    <figure class="effect-honey">
-                        <img src="img/gallery-item-06.jpg" alt="Featured Item">
-                        <figcaption>
-                            <h4><i><span>Max</span> CSS Layout</i></h4>
-                        </figcaption>
-                    </figure>
-                    <figure class="effect-honey">
-                        <img src="img/gallery-item-07.jpg" alt="Featured Item">
-                        <figcaption>
-                            <h4><i><span>Best</span> HTML Layout</i></h4>
-                        </figcaption>
-                    </figure>
-                    <figure class="effect-honey">
-                        <img src="img/gallery-item-08.jpg" alt="Featured Item">
-                        <figcaption>
-                            <h4><i><span>Best</span> CSS Template</i></h4>
-                        </figcaption>
-                    </figure>
-                </div>
-            </section>
+    <!-- Featured -->
+    <section class="tm-featured">
+        <div class="row">
+            <div class="col-12">
+                <h2 class="tm-section-header tm-section-header-small">Featured Carousel Items</h2>
+            </div>
+        </div>
 
-            <footer>
-                Copyright &copy; 2020 New Vision
+        <!-- Carousel -->
+        <div class="grid tm-carousel">
+            <figure class="effect-honey">
+                <img src="img/gallery-item-01.jpg" alt="Featured Item">
+                <figcaption>
+                    <h4><i><span>Best</span> HTML Template</i></h4>
+                </figcaption>
+            </figure>
+            <figure class="effect-honey">
+                <img src="img/gallery-item-02.jpg" alt="Featured Item">
+                <figcaption>
+                    <h4><i><span>Top</span> CSS Theme</i></h4>
+                </figcaption>
+            </figure>
+            <figure class="effect-honey">
+                <img src="img/gallery-item-03.jpg" alt="Featured Item">
+                <figcaption>
+                    <h4><i><span>Best</span> HTML Template</i></h4>
+                </figcaption>
+            </figure>
+            <figure class="effect-honey">
+                <img src="img/gallery-item-04.jpg" alt="Featured Item">
+                <figcaption>
+                    <h4><i><span>Great</span> Web Theme</i></h4>
+                </figcaption>
+            </figure>
+            <figure class="effect-honey">
+                <img src="img/gallery-item-05.jpg" alt="Featured Item">
+                <figcaption>
+                    <h4><i><span>Best</span> HTML Collection</i></h4>
+                </figcaption>
+            </figure>
+            <figure class="effect-honey">
+                <img src="img/gallery-item-06.jpg" alt="Featured Item">
+                <figcaption>
+                    <h4><i><span>Max</span> CSS Layout</i></h4>
+                </figcaption>
+            </figure>
+            <figure class="effect-honey">
+                <img src="img/gallery-item-07.jpg" alt="Featured Item">
+                <figcaption>
+                    <h4><i><span>Best</span> HTML Layout</i></h4>
+                </figcaption>
+            </figure>
+            <figure class="effect-honey">
+                <img src="img/gallery-item-08.jpg" alt="Featured Item">
+                <figcaption>
+                    <h4><i><span>Best</span> CSS Template</i></h4>
+                </figcaption>
+            </figure>
+        </div>
+    </section>
 
-                - Design: <a href="https://templatemo.com" rel="sponsored" target="_parent"
-                    title="css templates">TemplateMo</a>
-            </footer>
+    <footer>
+        Copyright &copy; 2020 New Vision
 
-        </main>
+        - Design: <a href="https://templatemo.com" rel="sponsored" target="_parent" title="css templates">TemplateMo</a>
+    </footer>
+
+    </main>
     </div>
     <script src="../js/jquery-3.4.1.min.js"></script>
     <script src="../slick/slick.min.js"></script>
