--- a/modified/nunneries/thrangu.html
+++ b/modified/nunneries/thrangu.html
@@ -143,11 +143,9 @@ https://templatemo.com/tm-542-new-vision
                     <div class="tm-about">
 
                         <div class="col-12 tm-media tm-media-v-center">
-                            <p> <strong>Help Tibetan Nuns, Inc.</strong> is a non-profit created by U.S. supporters
-                                of Thrangu Kong Jo
-                                Sherab Ling Nunnery, an affiliate of Thrangu Monastery in Kham, Eastern Tibet. This
-                                thriving Buddhist community houses over 100 nuns in Yushu, Qinghai, near the town of
-                                Jiegu. This area was hit by a major earthquake in 2010, killing about 2,700 people.
+                            <p>Thrangu Kong Jo Sherab Ling Nunnery is an affiliate of Thrangu Monastery in Kham, Eastern
+                                Tibet. This thriving Buddhist community houses over 100 nuns in Yushu, Qinghai, near the
+                                town of Jiegu.
                             </p>
                         </div>
                         <div class="col-12 tm-media tm-media-v-center">
