--- a/modified/nunneries/thrangu.html
+++ b/modified/nunneries/thrangu.html
@@ -148,116 +148,127 @@ https://templatemo.com/tm-542-new-vision
                                 town of Jiegu.
                             </p>
                         </div>
-                        <div class="col-12 tm-media tm-media-v-center">
-                            <!-- <i class="fas fa-5x fa-air-freshener tm-about-icon"></i> -->
-                            <div>
-                                <p>Resting on the Tibetan Plateau 12,000 feet above sea level, the nunnery consists of a
-                                    temple, a three-year-retreat building, a library and dining building, a large guest
-                                    house, and living facilities for the nuns. The nunnery is in a very remote area. The
-                                    nuns are poor and currently have no source of income other than what they are able
-                                    to obtain by begging and what their families provide.</p>
+
+                        <!-- two-column image section -->
+                        <div class="row tm-welcome-row-2">
+
+                            <div class="col-md-6">
+                                <div class="tm-about-1">
+                                    <img src="../media/many-nuns-on-steps.jpeg" alt="Image" class="img-fluid mb-5">
+                                    <p class="tm-article-text">
+                                        Help Tibetan Nuns, Inc. has extended its activity to support additional
+                                        nunneries in
+                                        India, Bhutan, Nepal, and Tibet. In 2017 and 2018 we reached a high point in our
+                                        giving when a generous donation enabled us to help over 500 nuns including
+                                        children,
+                                        young women, middle-aged nuns, and elders. These women found a spiritual home in
+                                        the
+                                        nunneries we help support.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="tm-about-1">
+                                    <img src="../media/MonestaryRoof.jpeg" alt="Image" class="img-fluid mb-5">
+                                    <p class="tm-article-text">
+                                        Some of the funds went to healthcare, some to education,
+                                        and some to the construction of housing facilities. In Bhutan we made a generous
+                                        donation towards the building of a new shedra (university). In the future we
+                                        plan to
+                                        continue our outreach to include more nunneries in the Himalayan Region.
+                                    </p>
+                                </div>
+                            </div>
+                            <!-- end two-column image section -->
+
+                            <div class="col-12 tm-media tm-media-v-center">
+                                <!-- <i class="fas fa-5x fa-air-freshener tm-about-icon"></i> -->
+                                <div>
+                                    <p>Resting on the Tibetan Plateau 12,000 feet above sea level, the nunnery consists
+                                        of a
+                                        temple, a three-year-retreat building, a library and dining building, a large
+                                        guest
+                                        house, and living facilities for the nuns. The nunnery is in a very remote area.
+                                        The
+                                        nuns are poor and currently have no source of income other than what they are
+                                        able
+                                        to obtain by begging and what their families provide.</p>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
+            </section>
 
-
-                <div class="row tm-welcome-row-2">
-                    <div class="col-md-6">
-                        <div class="tm-about-1">
-                            <img src="../media/many-nuns-on-steps.jpeg" alt="Image" class="img-fluid mb-5">
-                            <p class="tm-article-text">
-                                Help Tibetan Nuns, Inc. has extended its activity to support additional nunneries in
-                                India, Bhutan, Nepal, and Tibet. In 2017 and 2018 we reached a high point in our
-                                giving when a generous donation enabled us to help over 500 nuns including children,
-                                young women, middle-aged nuns, and elders. These women found a spiritual home in the
-                                nunneries we help support.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="tm-about-1">
-                            <img src="../media/MonestaryRoof.jpeg" alt="Image" class="img-fluid mb-5">
-                            <p class="tm-article-text">
-                                Some of the funds went to healthcare, some to education,
-                                and some to the construction of housing facilities. In Bhutan we made a generous
-                                donation towards the building of a new shedra (university). In the future we plan to
-                                continue our outreach to include more nunneries in the Himalayan Region.
-                            </p>
-                        </div>
+            <!-- Featured -->
+            <section class="tm-featured">
+                <div class="row">
+                    <div class="col-12">
+                        <h2 class="tm-section-header tm-section-header-small">Featured Carousel Items</h2>
                     </div>
                 </div>
-    </div>
-    </section>
 
-    <!-- Featured -->
-    <section class="tm-featured">
-        <div class="row">
-            <div class="col-12">
-                <h2 class="tm-section-header tm-section-header-small">Featured Carousel Items</h2>
-            </div>
-        </div>
+                <!-- Carousel -->
+                <div class="grid tm-carousel">
+                    <figure class="effect-honey">
+                        <img src="img/gallery-item-01.jpg" alt="Featured Item">
+                        <figcaption>
+                            <h4><i><span>Best</span> HTML Template</i></h4>
+                        </figcaption>
+                    </figure>
+                    <figure class="effect-honey">
+                        <img src="img/gallery-item-02.jpg" alt="Featured Item">
+                        <figcaption>
+                            <h4><i><span>Top</span> CSS Theme</i></h4>
+                        </figcaption>
+                    </figure>
+                    <figure class="effect-honey">
+                        <img src="img/gallery-item-03.jpg" alt="Featured Item">
+                        <figcaption>
+                            <h4><i><span>Best</span> HTML Template</i></h4>
+                        </figcaption>
+                    </figure>
+                    <figure class="effect-honey">
+                        <img src="img/gallery-item-04.jpg" alt="Featured Item">
+                        <figcaption>
+                            <h4><i><span>Great</span> Web Theme</i></h4>
+                        </figcaption>
+                    </figure>
+                    <figure class="effect-honey">
+                        <img src="img/gallery-item-05.jpg" alt="Featured Item">
+                        <figcaption>
+                            <h4><i><span>Best</span> HTML Collection</i></h4>
+                        </figcaption>
+                    </figure>
+                    <figure class="effect-honey">
+                        <img src="img/gallery-item-06.jpg" alt="Featured Item">
+                        <figcaption>
+                            <h4><i><span>Max</span> CSS Layout</i></h4>
+                        </figcaption>
+                    </figure>
+                    <figure class="effect-honey">
+                        <img src="img/gallery-item-07.jpg" alt="Featured Item">
+                        <figcaption>
+                            <h4><i><span>Best</span> HTML Layout</i></h4>
+                        </figcaption>
+                    </figure>
+                    <figure class="effect-honey">
+                        <img src="img/gallery-item-08.jpg" alt="Featured Item">
+                        <figcaption>
+                            <h4><i><span>Best</span> CSS Template</i></h4>
+                        </figcaption>
+                    </figure>
+                </div>
+            </section>
 
-        <!-- Carousel -->
-        <div class="grid tm-carousel">
-            <figure class="effect-honey">
-                <img src="img/gallery-item-01.jpg" alt="Featured Item">
-                <figcaption>
-                    <h4><i><span>Best</span> HTML Template</i></h4>
-                </figcaption>
-            </figure>
-            <figure class="effect-honey">
-                <img src="img/gallery-item-02.jpg" alt="Featured Item">
-                <figcaption>
-                    <h4><i><span>Top</span> CSS Theme</i></h4>
-                </figcaption>
-            </figure>
-            <figure class="effect-honey">
-                <img src="img/gallery-item-03.jpg" alt="Featured Item">
-                <figcaption>
-                    <h4><i><span>Best</span> HTML Template</i></h4>
-                </figcaption>
-            </figure>
-            <figure class="effect-honey">
-                <img src="img/gallery-item-04.jpg" alt="Featured Item">
-                <figcaption>
-                    <h4><i><span>Great</span> Web Theme</i></h4>
-                </figcaption>
-            </figure>
-            <figure class="effect-honey">
-                <img src="img/gallery-item-05.jpg" alt="Featured Item">
-                <figcaption>
-                    <h4><i><span>Best</span> HTML Collection</i></h4>
-                </figcaption>
-            </figure>
-            <figure class="effect-honey">
-                <img src="img/gallery-item-06.jpg" alt="Featured Item">
-                <figcaption>
-                    <h4><i><span>Max</span> CSS Layout</i></h4>
-                </figcaption>
-            </figure>
-            <figure class="effect-honey">
-                <img src="img/gallery-item-07.jpg" alt="Featured Item">
-                <figcaption>
-                    <h4><i><span>Best</span> HTML Layout</i></h4>
-                </figcaption>
-            </figure>
-            <figure class="effect-honey">
-                <img src="img/gallery-item-08.jpg" alt="Featured Item">
-                <figcaption>
-                    <h4><i><span>Best</span> CSS Template</i></h4>
-                </figcaption>
-            </figure>
-        </div>
-    </section>
+            <footer>
+                Copyright &copy; 2020 New Vision
 
-    <footer>
-        Copyright &copy; 2020 New Vision
+                - Design: <a href="https://templatemo.com" rel="sponsored" target="_parent"
+                    title="css templates">TemplateMo</a>
+            </footer>
 
-        - Design: <a href="https://templatemo.com" rel="sponsored" target="_parent" title="css templates">TemplateMo</a>
-    </footer>
-
-    </main>
+        </main>
     </div>
     <script src="../js/jquery-3.4.1.min.js"></script>
     <script src="../slick/slick.min.js"></script>
