--- a/modified/nunneries/thrangu.html
+++ b/modified/nunneries/thrangu.html
@@ -156,14 +156,11 @@ https://templatemo.com/tm-542-new-vision
                                 <div class="tm-about-1">
                                     <img src="../media/many-nuns-on-steps.jpeg" alt="Image" class="img-fluid mb-5">
                                     <p class="tm-article-text">
-                                        Help Tibetan Nuns, Inc. has extended its activity to support additional
-                                        nunneries in
-                                        India, Bhutan, Nepal, and Tibet. In 2017 and 2018 we reached a high point in our
-                                        giving when a generous donation enabled us to help over 500 nuns including
-                                        children,
-                                        young women, middle-aged nuns, and elders. These women found a spiritual home in
-                                        the
-                                        nunneries we help support.
+                                        The nunnery is in a very remote area. The nuns are poor and currently have no
+                                        source of income other than what they are able to obtain by begging and what
+                                        their families provide. Under the direction of Lodroe Nyima Rinpoche, they are
+                                        currently looking at ways to become self-sustaining while simultaneously
+                                        supplying some of the crucial needs of the local community.
                                     </p>
                                 </div>
                             </div>
@@ -171,11 +168,12 @@ https://templatemo.com/tm-542-new-vision
                                 <div class="tm-about-1">
                                     <img src="../media/MonestaryRoof.jpeg" alt="Image" class="img-fluid mb-5">
                                     <p class="tm-article-text">
-                                        Some of the funds went to healthcare, some to education,
-                                        and some to the construction of housing facilities. In Bhutan we made a generous
-                                        donation towards the building of a new shedra (university). In the future we
-                                        plan to
-                                        continue our outreach to include more nunneries in the Himalayan Region.
+                                        One way they have started supporting themselves is by operating a spring-fed
+                                        swimming pool, which is located right next to the monastery. Donations from Help
+                                        Tibetan Nuns, Inc. made the transformation of this naturally occurring healing
+                                        spring into a Olympic-sized swimming pool possible. There is also a plan to
+                                        build a medical clinic and train the nuns to provide care for the local
+                                        community.
                                     </p>
                                 </div>
                             </div>
@@ -184,15 +182,12 @@ https://templatemo.com/tm-542-new-vision
                             <div class="col-12 tm-media tm-media-v-center">
                                 <!-- <i class="fas fa-5x fa-air-freshener tm-about-icon"></i> -->
                                 <div>
-                                    <p>Resting on the Tibetan Plateau 12,000 feet above sea level, the nunnery consists
-                                        of a
-                                        temple, a three-year-retreat building, a library and dining building, a large
-                                        guest
-                                        house, and living facilities for the nuns. The nunnery is in a very remote area.
-                                        The
-                                        nuns are poor and currently have no source of income other than what they are
-                                        able
-                                        to obtain by begging and what their families provide.</p>
+                                    <p>
+                                        Since its founding in 2011, Help Tibetan Nuns, Inc. has already raised $150,000
+                                        to support Thrangu Kong Jo Sherab Ling Nunnery, and there is still so much more
+                                        to be done.
+
+                                    </p>
                                 </div>
                             </div>
                         </div>
