Thrangu- replace previous photos with appropriate images

--- a/modified/nunneries/thrangu.html
+++ b/modified/nunneries/thrangu.html
@@ -154,7 +154,7 @@ https://templatemo.com/tm-542-new-vision
 
                             <div class="col-md-6">
                                 <div class="tm-about-1">
-                                    <img src="../media/many-nuns-on-steps.jpeg" alt="Image" class="img-fluid mb-5">
+                                    <img src="../media/Lodroe-Nyima-Rinpoche.jpg" alt="Image" class="img-fluid mb-5">
                                     <p class="tm-article-text">
                                         The nunnery is in a very remote area. The nuns are poor and currently have no
                                         source of income other than what they are able to obtain by begging and what
@@ -166,7 +166,7 @@ https://templatemo.com/tm-542-new-vision
                             </div>
                             <div class="col-md-6">
                                 <div class="tm-about-1">
-                                    <img src="../media/MonestaryRoof.jpeg" alt="Image" class="img-fluid mb-5">
+                                    <img src="../media/pool-2.jpg" alt="Image" class="img-fluid mb-5">
                                     <p class="tm-article-text">
                                         One way they have started supporting themselves is by operating a spring-fed
                                         swimming pool, which is located right next to the monastery. Donations from Help
