--- a/modified/nunneries/thrangu.html
+++ b/modified/nunneries/thrangu.html
@@ -199,7 +199,8 @@ https://templatemo.com/tm-542-new-vision
             <section class="tm-featured">
                 <div class="row">
                     <div class="col-12">
-                        <h2 class="tm-section-header tm-section-header-small">Featured Carousel Items</h2>
+                        <h2 class="tm-section-header tm-section-header-small">Nuns Building a Community Road at Thrangu
+                        </h2>
                     </div>
                 </div>
 
