update captions for photos in carousel

--- a/modified/nunneries/thrangu.html
+++ b/modified/nunneries/thrangu.html
@@ -209,19 +209,20 @@ https://templatemo.com/tm-542-new-vision
                     <figure class="effect-honey">
                         <img src="../media/nuns-at-thrangu-carry-rocks-for-community-road.jpeg" alt="Featured Item">
                         <figcaption>
-                            <h4><i><span>Best</span> HTML Template</i></h4>
+                            <h4><i><span>Optional</span> Caption (can change color of underline later if we will use
+                                    this)</i></h4>
                         </figcaption>
                     </figure>
                     <figure class="effect-honey">
                         <img src="../media/nuns-at-thrangu-carry-rocks-for-community-road-2.jpeg" alt="Featured Item">
                         <figcaption>
-                            <h4><i><span>Top</span> CSS Theme</i></h4>
+                            <h4><i><span>Optional</span> Caption</i></h4>
                         </figcaption>
                     </figure>
                     <figure class="effect-honey">
                         <img src="../media/nuns-at-thrangu-carry-rocks-for-community-road-3.jpeg" alt="Featured Item">
                         <figcaption>
-                            <h4><i><span>Best</span> HTML Template</i></h4>
+                            <h4><i><span>Optional</span> Caption</i></h4>
                         </figcaption>
                     </figure>
 
