Thrangu- add map

--- a/modified/nunneries/thrangu.html
+++ b/modified/nunneries/thrangu.html
@@ -139,6 +139,13 @@ https://templatemo.com/tm-542-new-vision
                     </div>
                 </div>
 
+                <figure class="hero">
+                    <img src="../media/thrangu-gompa-map.png">
+                    <figcaption>
+                        Thrangu Nunnery approximate location in Eastern Tibet
+                    </figcaption>
+                </figure>
+
                 <div class="row tm-welcome-row">
                     <div class="tm-about">
 
