Thrangu- adjust spacing between map and adjacent sections

--- a/modified/nunneries/thrangu.html
+++ b/modified/nunneries/thrangu.html
@@ -139,14 +139,14 @@ https://templatemo.com/tm-542-new-vision
                     </div>
                 </div>
 
-                <figure class="hero">
+                <figure class="hero" style="margin-top: 128px;">
                     <img src="../media/thrangu-gompa-map.png">
                     <figcaption>
                         Thrangu Nunnery approximate location in Eastern Tibet
                     </figcaption>
                 </figure>
 
-                <div class="row tm-welcome-row">
+                <div class="row tm-welcome-row" style="margin-top: 0;">
                     <div class="tm-about">
 
                         <div class="col-12 tm-media tm-media-v-center">
