--- a/modified/nunneries/thrangu.html
+++ b/modified/nunneries/thrangu.html
@@ -161,7 +161,7 @@ https://templatemo.com/tm-542-new-vision
 
                             <div class="col-md-6">
                                 <div class="tm-about-1">
-                                    <img src="../media/Lodroe-Nyima-Rinpoche.jpg" alt="Image" class="img-fluid mb-5">
+                                    <img src="../media/Lodroe-Nyima-Rinpoche.png" alt="Image" class="img-fluid mb-5">
                                     <p class="tm-article-text">
                                         The nunnery is in a very remote area. The nuns are poor and currently have no
                                         source of income other than what they are able to obtain by begging and what
@@ -173,7 +173,7 @@ https://templatemo.com/tm-542-new-vision
                             </div>
                             <div class="col-md-6">
                                 <div class="tm-about-1">
-                                    <img src="../media/pool-2.jpg" alt="Image" class="img-fluid mb-5">
+                                    <img src="../media/pool-2.png" alt="Image" class="img-fluid mb-5">
                                     <p class="tm-article-text">
                                         One way they have started supporting themselves is by operating a spring-fed
                                         swimming pool, which is located right next to the monastery. Donations from Help
