--- a/modified/nunneries/thrangu.html
+++ b/modified/nunneries/thrangu.html
@@ -55,14 +55,14 @@ https://templatemo.com/tm-542-new-vision
                             <!-- Links -->
                             <ul class="nav nav-tabs">
                                 <li class="nav-item">
-                                    <a class="nav-link active tm-nav-link" href="#">Home</a>
+                                    <a class="nav-link active tm-nav-link" href="../index.html">Home</a>
                                 </li>
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle tm-nav-link" data-toggle="dropdown" href="#"
                                         role="button" aria-haspopup="true" aria-expanded="false">About Us</a>
                                     <div class="dropdown-menu">
-                                        <a class="dropdown-item" href="./our-story.html">Our Story</a>
-                                        <a class="dropdown-item" href="./board.html">Our Board</a>
+                                        <a class="dropdown-item" href="../our-story.html">Our Story</a>
+                                        <a class="dropdown-item" href="../board.html">Our Board</a>
                                     </div>
                                 </li>
                                 <li class="nav-item dropdown">
@@ -71,13 +71,13 @@ https://templatemo.com/tm-542-new-vision
                                         Nunneries
                                     </a>
                                     <div class="dropdown-menu">
-                                        <a class="dropdown-item" href="./nunneries/thrangu.html">
+                                        <a class="dropdown-item" href="../nunneries/thrangu.html">
                                             Thrangu Kong Jo Sherab Ling
                                         </a>
-                                        <a class="dropdown-item" href="./nunneries/tilokpur.html">
+                                        <a class="dropdown-item" href="../nunneries/tilokpur.html">
                                             Tilokpur
                                         </a>
-                                        <a class="dropdown-item" href="./nunneries/palchen-chosling-lachi.html">
+                                        <a class="dropdown-item" href="../nunneries/palchen-chosling-lachi.html">
                                             Palchen Chosling Lachi
                                         </a>
                                     </div>
@@ -88,10 +88,10 @@ https://templatemo.com/tm-542-new-vision
                                         How To Help
                                     </a>
                                     <div class="dropdown-menu">
-                                        <a class="dropdown-item" href="./help/sponsor.html">
+                                        <a class="dropdown-item" href="../help/sponsor.html">
                                             Sponsoring Nuns
                                         </a>
-                                        <a class="dropdown-item" href="./help/call-to-action.html">
+                                        <a class="dropdown-item" href="../help/call-to-action.html">
                                             Call to Action
                                         </a>
 
@@ -103,13 +103,13 @@ https://templatemo.com/tm-542-new-vision
                                         Misc
                                     </a>
                                     <div class="dropdown-menu">
-                                        <a class="dropdown-item" href="./blog.html">
+                                        <a class="dropdown-item" href="../blog.html">
                                             Blog
                                         </a>
-                                        <a class="dropdown-item" href="./gallery.html">
+                                        <a class="dropdown-item" href="../gallery.html">
                                             Gallery
                                         </a>
-                                        <a class="dropdown-item" href="./events.html">
+                                        <a class="dropdown-item" href="../events.html">
                                             Events
                                         </a>
 
@@ -151,7 +151,8 @@ https://templatemo.com/tm-542-new-vision
 
                         <div class="col-12 tm-media tm-media-v-center">
                             <p>Thrangu Kong Jo Sherab Ling Nunnery is an affiliate of Thrangu Monastery in Kham, Eastern
-                                Tibet. This thriving Buddhist community houses over 100 nuns in Yushu, Qinghai, near the
+                                Tibet. This thriving B.tm-about-1uddhist community houses over 100 nuns in Yushu,
+                                Qinghai, near the
                                 town of Jiegu.
                             </p>
                         </div>
