Tilokpur- update header

--- a/modified/nunneries/tilokpur.html
+++ b/modified/nunneries/tilokpur.html
@@ -135,7 +135,7 @@ https://templatemo.com/tm-542-new-vision
             <section class="tm-welcome">
                 <div class="row">
                     <div class="col-12">
-                        <h2 class="tm-section-header tm-header-floating">Thrangu Kong Jo Sherab Ling Nunnery</h2>
+                        <h2 class="tm-section-header tm-header-floating">Tilokpur Nunnery</h2>
                     </div>
                 </div>
 
