Tilokpur- replace map

--- a/modified/nunneries/tilokpur.html
+++ b/modified/nunneries/tilokpur.html
@@ -140,7 +140,7 @@ https://templatemo.com/tm-542-new-vision
                 </div>
 
                 <figure class="hero" style="margin-top: 128px;">
-                    <img src="../media/thrangu-gompa-map.png">
+                    <img src="../media/Tilokpur-Map.png">
                     <figcaption>
                         Thrangu Nunnery approximate location in Eastern Tibet
                     </figcaption>
