Tilokpur- update map caption

--- a/modified/nunneries/tilokpur.html
+++ b/modified/nunneries/tilokpur.html
@@ -142,7 +142,7 @@ https://templatemo.com/tm-542-new-vision
                 <figure class="hero" style="margin-top: 128px;">
                     <img src="../media/Tilokpur-Map.png">
                     <figcaption>
-                        Thrangu Nunnery approximate location in Eastern Tibet
+                        Tilokpur Nunnery approximate location in North India
                     </figcaption>
                 </figure>
 
