Tilokpur- limit map width and center caption

--- a/modified/nunneries/tilokpur.html
+++ b/modified/nunneries/tilokpur.html
@@ -140,8 +140,8 @@ https://templatemo.com/tm-542-new-vision
                 </div>
 
                 <figure class="hero" style="margin-top: 128px;">
-                    <img src="../media/Tilokpur-Map.png">
-                    <figcaption>
+                    <img src="../media/Tilokpur-Map.png" style="max-width: 750px;">
+                    <figcaption style="text-align: center;">
                         Tilokpur Nunnery approximate location in North India
                     </figcaption>
                 </figure>
