update caption to reflect Palma's specifications

--- a/modified/nunneries/tilokpur.html
+++ b/modified/nunneries/tilokpur.html
@@ -142,7 +142,7 @@ https://templatemo.com/tm-542-new-vision
                 <figure class="hero" style="margin-top: 128px;">
                     <img src="../media/Tilokpur-Map.png" style="max-width: 750px;">
                     <figcaption style="text-align: center;">
-                        Tilokpur Nunnery approximate location in North India
+                        Tilokpur Nunnery approximate location in Dharamshala, India
                     </figcaption>
                 </figure>
 
