Thrangu- update map caption to reflect Palma's specifications

--- a/modified/nunneries/thrangu.html
+++ b/modified/nunneries/thrangu.html
@@ -142,7 +142,7 @@ https://templatemo.com/tm-542-new-vision
                 <figure class="hero" style="margin-top: 128px;">
                     <img src="../media/thrangu-gompa-map.png">
                     <figcaption>
-                        Thrangu Nunnery approximate location in Eastern Tibet
+                        Thrangu Nunnery approximate location in Kham, Eastern Tibet
                     </figcaption>
                 </figure>
 
