Lachi- update hero pic

--- a/modified/nunneries/palchen-chosling-lachi.html
+++ b/modified/nunneries/palchen-chosling-lachi.html
@@ -125,7 +125,7 @@ https://templatemo.com/tm-542-new-vision
 
         <div class="row">
             <div class="col-12">
-                <img src="../media/tilokpur-nuns.jpeg" alt="Nuns on the steps of Thrangu Nunnery" class="hero" />
+                <img src="../media/NunsOutsidePanorama.jpeg" alt="Nuns on the steps of Thrangu Nunnery" class="hero" />
             </div>
         </div>
 
