--- a/modified/nunneries/palchen-chosling-lachi.html
+++ b/modified/nunneries/palchen-chosling-lachi.html
@@ -135,14 +135,14 @@ https://templatemo.com/tm-542-new-vision
             <section class="tm-welcome">
                 <div class="row">
                     <div class="col-12">
-                        <h2 class="tm-section-header tm-header-floating">Tilokpur Nunnery</h2>
+                        <h2 class="tm-section-header tm-header-floating">Palchen Chosling Lachi Nunnery</h2>
                     </div>
                 </div>
 
                 <figure class="hero" style="margin-top: 128px;">
-                    <img src="../media/Tilokpur-Map.png" style="max-width: 750px;">
+                    <img src="../media/Palchen-Chosling-Lachi-map.png" style="max-width: 750px;">
                     <figcaption style="text-align: center;">
-                        Tilokpur Nunnery approximate location in Dharamshala, India
+                        Palchen Chosling Lachi Nunnery approximate location in Ralang, Sikkim, India
                     </figcaption>
                 </figure>
 
