Sponsor- add rest of page template

--- a/modified/help/sponsor.html
+++ b/modified/help/sponsor.html
@@ -122,3 +122,45 @@ https://templatemo.com/tm-542-new-vision
                 </div>
             </div>
         </div>
+
+        <div class="row">
+            <div class="col-12">
+                <img src="../media/NunsOutsidePanorama.jpeg" alt="Nuns on the steps of Thrangu Nunnery" class="hero" />
+            </div>
+        </div>
+
+        <!-- Main -->
+        <main>
+            <!-- Welcome section -->
+            <section class="tm-welcome">
+                <div class="row">
+                    <div class="col-12">
+                        <h2 class="tm-section-header tm-header-floating">Palchen Chosling Lachi Nunnery</h2>
+                    </div>
+                </div>
+
+                <figure class="hero" style="margin-top: 128px;">
+                    <img src="../media/Palchen-Chosling-Lachi-map.png" style="max-width: 750px;">
+                    <figcaption style="text-align: center;">
+                        Palchen Chosling Lachi Nunnery approximate location in Ralang, Sikkim, India
+                    </figcaption>
+                </figure>
+
+            </section>
+
+            <footer>
+                Copyright &copy; 2020 New Vision
+
+                - Design: <a href="https://templatemo.com" rel="sponsored" target="_parent"
+                    title="css templates">TemplateMo</a>
+            </footer>
+
+        </main>
+    </div>
+    <script src="../js/jquery-3.4.1.min.js"></script>
+    <script src="../slick/slick.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
+    <script src="../js/templatemo-script.js"></script>
+</body>
+
+</html>
