--- a/modified/help/sponsor.html
+++ b/modified/help/sponsor.html
@@ -135,7 +135,7 @@ https://templatemo.com/tm-542-new-vision
             <section class="tm-welcome">
                 <div class="row">
                     <div class="col-12">
-                        <h2 class="tm-section-header tm-header-floating">Palchen Chosling Lachi Nunnery</h2>
+                        <h2 class="tm-section-header tm-header-floating">Sponsorship Options</h2>
                     </div>
                 </div>
 
