--- a/modified/help/sponsor.html
+++ b/modified/help/sponsor.html
@@ -139,6 +139,37 @@ https://templatemo.com/tm-542-new-vision
                     </div>
                 </div>
 
+                <div class="row tm-welcome-row">
+                    <div class="tm-about">
+                        <div class="col-12 tm-media tm-media-v-center">
+                            <i class="fab fa-5x fa-accusoft tm-about-icon"></i>
+                            <div>
+                                <p><a rel="nofollow" target="_parent"
+                                        href="https://templatemo.com/tm-542-new-vision">New Vision HTML Template</a> is
+                                    provided by TemplateMo for 100% free of charge. Vestibulum consectetur urna augue,
+                                    in sagittis mi sodales ut. Maecenas at quam et ligula vulputate commodo. Integer
+                                    tempor nec velit ut pulvinar. In hac habitasse platea dictumst.</p>
+                            </div>
+                        </div>
+                        <div class="col-12 tm-media tm-media-v-center">
+                            <i class="fas fa-5x fa-air-freshener tm-about-icon"></i>
+                            <div>
+                                <p>Curabitur et viverra purus, in ornare sem. Donec eu imperdiet felis, sed interdum
+                                    leo. Mauris nisl mi, bibendum eu venenatis at, condimentum et dui. Proin mi enim,
+                                    dapibus at metus semper, hendrerit faucibus nisi.</p>
+                            </div>
+                        </div>
+                        <div class="col-12 tm-media tm-media-v-center">
+                            <i class="fas fa-5x fa-fire-alt tm-about-icon"></i>
+                            <div>
+                                <p>Duis accumsan dolor feugiat dapibus ultrices. Vestibulum consectetur urna augue, in
+                                    sagittis mi sodales ut. Maecenas at quam et ligula vulputate commodo. Integer tempor
+                                    nec velit ut pulvinar. In hac habitasse platea dictumst.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </section>
 
             <footer>
