Sponsor- update text from template to content of page

--- a/modified/help/sponsor.html
+++ b/modified/help/sponsor.html
@@ -144,27 +144,68 @@ https://templatemo.com/tm-542-new-vision
                         <div class="col-12 tm-media tm-media-v-center">
 
                             <div>
-                                <p><a rel="nofollow" target="_parent"
-                                        href="https://templatemo.com/tm-542-new-vision">New Vision HTML Template</a> is
-                                    provided by TemplateMo for 100% free of charge. Vestibulum consectetur urna augue,
-                                    in sagittis mi sodales ut. Maecenas at quam et ligula vulputate commodo. Integer
-                                    tempor nec velit ut pulvinar. In hac habitasse platea dictumst.</p>
+                                <p>
+                                    There are many ways to support Thrangu Ko Jong Sherab Ling Nunnery. Besides
+                                    supporting the new medical center project, one may wish to contribute to the
+                                    daily costs of running the nunnery, or support a nun in three-year-retreat.What
+                                    funding is needed at the Nunnery?
+                                </p>
                             </div>
                         </div>
                         <div class="col-12 tm-media tm-media-v-center">
 
                             <div>
-                                <p>Curabitur et viverra purus, in ornare sem. Donec eu imperdiet felis, sed interdum
-                                    leo. Mauris nisl mi, bibendum eu venenatis at, condimentum et dui. Proin mi enim,
-                                    dapibus at metus semper, hendrerit faucibus nisi.</p>
+                                <p>
+                                    Daily Necessities:
+
+                                    1. Food – Nuns at the monastery are nourished by the generosity of the townspeople.
+                                    However, the influx of converting nuns to the monastery is creating a shortage of
+                                    food. Currently over 100 nuns are relying on butter, cheese, and the slim donations
+                                    they receive through begging.
+
+                                    2. Lamps, especially during pujas
+
+                                    3. Supplies for the kitchen and library
+
+                                    4. Blankets
+
+                                    5. Monetary donations to cover the costs of heat, electricity, medicine, teaching
+                                    material, and transportation
+                                </p>
                             </div>
                         </div>
                         <div class="col-12 tm-media tm-media-v-center">
 
                             <div>
-                                <p>Duis accumsan dolor feugiat dapibus ultrices. Vestibulum consectetur urna augue, in
-                                    sagittis mi sodales ut. Maecenas at quam et ligula vulputate commodo. Integer tempor
-                                    nec velit ut pulvinar. In hac habitasse platea dictumst.</p>
+                                <p>
+                                    Itemized list of weekly expenses:
+
+                                    $25 – 5 lbs of butter
+
+                                    $25 – 3 lbs of Yak Dung used for heating
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-12 tm-media tm-media-v-center">
+
+                            <div>
+                                <p>
+                                    More sponsorship options:
+
+                                    $83 – Sponsor one individual for one month of their 3-year-retreat
+
+                                    $792 – Sponsor 10 Anis and 1 Master for one month of their 3-year-retreat.
+
+                                    $800 – Sponsor one Nun at the monastery for an entire year.
+
+                                    $1000 – Sponsor one individual for one year of their 3-year-retreat.
+
+                                    $3000 – Sponsor one individual for the entirety of their 3-year-retreat.
+
+                                    $4,752 – Sponsor 10 Ani and 1 Master for 6 months of their 3-year-retreat.
+
+                                    $9,504 – Sponsor 10 Ani and 1 Master for one year of their 3-year-retreat.
+                                </p>
                             </div>
                         </div>
                     </div>
