--- a/modified/help/sponsor.html
+++ b/modified/help/sponsor.html
@@ -147,7 +147,7 @@ https://templatemo.com/tm-542-new-vision
                                 <p>
                                     There are many ways to support Thrangu Ko Jong Sherab Ling Nunnery. Besides
                                     supporting the new medical center project, one may wish to contribute to the
-                                    daily costs of running the nunnery, or support a nun in three-year-retreat.What
+                                    daily costs of running the nunnery, or support a nun in three-year-retreat. What
                                     funding is needed at the Nunnery?
                                 </p>
                             </div>
@@ -155,9 +155,8 @@ https://templatemo.com/tm-542-new-vision
                         <div class="col-12 tm-media tm-media-v-center">
 
                             <div>
+                                <h3>Daily Necessities:</h3>
                                 <p>
-                                    Daily Necessities:
-
                                     1. Food – Nuns at the monastery are nourished by the generosity of the townspeople.
                                     However, the influx of converting nuns to the monastery is creating a shortage of
                                     food. Currently over 100 nuns are relying on butter, cheese, and the slim donations
@@ -177,8 +176,8 @@ https://templatemo.com/tm-542-new-vision
                         <div class="col-12 tm-media tm-media-v-center">
 
                             <div>
+                                <h3>Itemized list of weekly expenses:</h3>
                                 <p>
-                                    Itemized list of weekly expenses:
 
                                     $25 – 5 lbs of butter
 
@@ -189,9 +188,8 @@ https://templatemo.com/tm-542-new-vision
                         <div class="col-12 tm-media tm-media-v-center">
 
                             <div>
+                                <h3>More sponsorship options:</h3>
                                 <p>
-                                    More sponsorship options:
-
                                     $83 – Sponsor one individual for one month of their 3-year-retreat
 
                                     $792 – Sponsor 10 Anis and 1 Master for one month of their 3-year-retreat.
