Sponsor- bold first paragraph to match original site

--- a/modified/help/sponsor.html
+++ b/modified/help/sponsor.html
@@ -144,7 +144,7 @@ https://templatemo.com/tm-542-new-vision
                         <div class="col-12 tm-media tm-media-v-center">
 
                             <div>
-                                <p>
+                                <p style="font-weight: bold;">
                                     There are many ways to support Thrangu Ko Jong Sherab Ling Nunnery. Besides
                                     supporting the new medical center project, one may wish to contribute to the
                                     daily costs of running the nunnery, or support a nun in three-year-retreat. What
