Sponsor- add space between titles and paragraphs

--- a/modified/help/sponsor.html
+++ b/modified/help/sponsor.html
@@ -155,7 +155,7 @@ https://templatemo.com/tm-542-new-vision
                         <div class="col-12 tm-media tm-media-v-center">
 
                             <div>
-                                <h3>Daily Necessities:</h3>
+                                <h3 class="tm-sponsor-page-title">Daily Necessities:</h3>
                                 <p>
                                     1. Food – Nuns at the monastery are nourished by the generosity of the townspeople.
                                     However, the influx of converting nuns to the monastery is creating a shortage of
@@ -176,7 +176,7 @@ https://templatemo.com/tm-542-new-vision
                         <div class="col-12 tm-media tm-media-v-center">
 
                             <div>
-                                <h3>Itemized list of weekly expenses:</h3>
+                                <h3 class="tm-sponsor-page-title">Itemized list of weekly expenses:</h3>
                                 <p>
                                     $25 – 5 lbs of butter
                                     <br>
@@ -187,7 +187,7 @@ https://templatemo.com/tm-542-new-vision
                         <div class="col-12 tm-media tm-media-v-center">
 
                             <div>
-                                <h3>More sponsorship options:</h3>
+                                <h3 class="tm-sponsor-page-title">More sponsorship options:</h3>
                                 <p>
                                     $83 – Sponsor one individual for one month of their 3-year-retreat
                                     <br>
