Action- update title and add text for Khenpo Karthar's letter

--- a/modified/help/call-to-action.html
+++ b/modified/help/call-to-action.html
@@ -125,15 +125,24 @@ https://templatemo.com/tm-542-new-vision
 
         <div class="row">
             <div class="col-12" style="margin:20px 0 50px;">
-                <h2 class="tm-section-header">Our Board</h2>
+                <h2 class="tm-section-header">Letter from Khenpo Karthar Rinpoche:</h2>
             </div>
         </div>
 
         <figure class="hero">
             <img src="../media/Letter_KKRinpoche_Seal.png" alt="picture of our board members">
             <figcaption>
-                HTN board members from left to right: Amy Schwarz, Lama Karma Drodhul, Amy McCracken, and Palma
-                Puzzuoli.
+                <p>
+                    Dear friends,
+                </p>
+                <br>
+                <p>
+                    In recent years there have been many natural disasters and adverse conditions in Tibet. The area of
+                    Thrangu Monastery also suffered a devastating earthquake a few years ago. Despite all this, the nuns
+                    in the Thrangu Nunnery are maintaining pure practice in the midst of food shortage and other
+                    difficulties. I would therefore be delighted if anyone could offer help. May all be free from
+                    obstacles in this life and ultimately obtain excellent fruition.
+                </p>
             </figcaption>
         </figure>
     </div>
