Action- update alt attr and add signature image

--- a/modified/help/call-to-action.html
+++ b/modified/help/call-to-action.html
@@ -130,7 +130,8 @@ https://templatemo.com/tm-542-new-vision
         </div>
 
         <figure class="hero">
-            <img src="../media/Letter_KKRinpoche_Seal.png" alt="picture of our board members">
+            <img src="../media/Letter_KKRinpoche_Seal.png"
+                alt="Karme Ling Retreat Center seal for letter from Khenpo Karthar Rinpoche">
             <figcaption>
                 <p>
                     Dear friends,
@@ -144,6 +145,8 @@ https://templatemo.com/tm-542-new-vision
                     obstacles in this life and ultimately obtain excellent fruition.
                 </p>
             </figcaption>
+
+            <img src="../media/Letter_KKRinpoche_signature.png">
         </figure>
     </div>
 
