Action- add typed name under signature

--- a/modified/help/call-to-action.html
+++ b/modified/help/call-to-action.html
@@ -129,7 +129,7 @@ https://templatemo.com/tm-542-new-vision
             </div>
         </div>
 
-        <figure class="hero">
+        <figure class="hero" style="max-width: 850px;">
             <img src="../media/Letter_KKRinpoche_Seal.png"
                 alt="Karme Ling Retreat Center seal for letter from Khenpo Karthar Rinpoche">
             <figcaption>
@@ -147,6 +147,10 @@ https://templatemo.com/tm-542-new-vision
             </figcaption>
 
             <img src="../media/Letter_KKRinpoche_signature.png">
+
+            <figcaption>
+                Khenpo Kharthar Rinpoche
+            </figcaption>
         </figure>
     </div>
 
