Action- center letter:

--- a/modified/help/call-to-action.html
+++ b/modified/help/call-to-action.html
@@ -129,31 +129,34 @@ https://templatemo.com/tm-542-new-vision
             </div>
         </div>
 
-        <figure class="hero" style="max-width: 850px;">
-            <img src="../media/Letter_KKRinpoche_Seal.png"
-                alt="Karme Ling Retreat Center seal for letter from Khenpo Karthar Rinpoche">
-            <figcaption>
-                <p>
-                    Dear friends,
-                </p>
-                <br>
-                <p>
-                    In recent years there have been many natural disasters and adverse conditions in Tibet. The area of
-                    Thrangu Monastery also suffered a devastating earthquake a few years ago. Despite all this, the nuns
-                    in the Thrangu Nunnery are maintaining pure practice in the midst of food shortage and other
-                    difficulties. I would therefore be delighted if anyone could offer help. May all be free from
-                    obstacles in this life and ultimately obtain excellent fruition.
-                </p>
-            </figcaption>
+        <div style="display: flex; justify-content: center;">
+            <figure class="hero" style="max-width: 850px;">
+                <img src="../media/Letter_KKRinpoche_Seal.png"
+                    alt="Karme Ling Retreat Center seal for letter from Khenpo Karthar Rinpoche">
+                <figcaption>
+                    <p>
+                        Dear friends,
+                    </p>
+                    <br>
+                    <p>
+                        In recent years there have been many natural disasters and adverse conditions in Tibet. The area
+                        of
+                        Thrangu Monastery also suffered a devastating earthquake a few years ago. Despite all this, the
+                        nuns
+                        in the Thrangu Nunnery are maintaining pure practice in the midst of food shortage and other
+                        difficulties. I would therefore be delighted if anyone could offer help. May all be free from
+                        obstacles in this life and ultimately obtain excellent fruition.
+                    </p>
+                </figcaption>
 
-            <img src="../media/Letter_KKRinpoche_signature.png">
+                <img src="../media/Letter_KKRinpoche_signature.png">
 
-            <figcaption>
-                Khenpo Kharthar Rinpoche
-            </figcaption>
-        </figure>
+                <figcaption>
+                    Khenpo Kharthar Rinpoche
+                </figcaption>
+            </figure>
+        </div>
     </div>
-
 
     <script src=".js/jquery-3.4.1.min.js"></script>
     <script src=".slick/slick.min.js"></script>
