Action- add spacing around title

--- a/modified/help/call-to-action.html
+++ b/modified/help/call-to-action.html
@@ -158,8 +158,8 @@ https://templatemo.com/tm-542-new-vision
         </div>
 
         <div class="row">
-            <div class="col-12">
-                <h2 class="tm-section-header">A Call to Action by Lama Karma Drodhul</h2>
+            <div class="col-12" style="margin:20px 0 50px;">
+                <h2 class="tm-section-header">A Call to Action by Lama Karma Drodhul:</h2>
             </div>
         </div>
 
