fix type in video class and limit width of Lama Karma's video

--- a/modified/help/call-to-action.html
+++ b/modified/help/call-to-action.html
@@ -159,13 +159,17 @@ https://templatemo.com/tm-542-new-vision
 
         <div class="row">
             <div class="col-12" style="margin:20px 0 50px;">
-                <h2 class="tm-section-header">A Call to Action by Lama Karma Drodhul:</h2>
+                <h2 class="tm-section-header">
+                    A Call to Action by Lama Karma Drodhul:
+                </h2>
             </div>
         </div>
 
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/buThtYhaW1Q" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
+        <div class="video-wrapper" style="max-width: 850px;">
+            <iframe src="https://www.youtube.com/embed/buThtYhaW1Q" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        </div>
     </div>
 
     <script src="../js/jquery-3.4.1.min.js"></script>
