--- a/modified/index.html
+++ b/modified/index.html
@@ -125,7 +125,7 @@ https://templatemo.com/tm-542-new-vision
 
         <div class="row">
             <div class="col-12">
-                <div class="tm-main-bg">
+                <div class="tm-main-bg video-wrapper">
                     <iframe src="https://www.youtube-nocookie.com/embed/WzyliYj9K5c" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
