Gallery- uncomment gallery html and update title

--- a/modified/misc/gallery.html
+++ b/modified/misc/gallery.html
@@ -259,15 +259,15 @@ https://templatemo.com/tm-542-new-vision
             </section>
 
             <!-- Featured -->
-            <!-- <section class="tm-featured">
+            <section class="tm-featured">
                 <div class="row">
                     <div class="col-12">
-                        <h2 class="tm-section-header tm-section-header-small">Featured Carousel Items</h2>
+                        <h2 class="tm-section-header">Gallery</h2>
                     </div>
-                </div> -->
+                </div>
 
-            <!-- Carousel -->
-            <!-- <div class="grid tm-carousel">
+                <!-- Carousel -->
+                <div class="grid tm-carousel">
                     <figure class="effect-honey">
                         <img src="img/gallery-item-01.jpg" alt="Featured Item">
                         <figcaption>
@@ -316,14 +316,14 @@ https://templatemo.com/tm-542-new-vision
                             <h4><i><span>Best</span> CSS Template</i></h4>
                         </figcaption>
                     </figure>
-                </div> -->
+                </div>
 
-            <footer>
-                Copyright &copy; 2020 New Vision
+                <footer>
+                    Copyright &copy; 2020 New Vision
 
-                - Design: <a href="https://templatemo.com" rel="sponsored" target="_parent"
-                    title="css templates">TemplateMo</a>
-            </footer>
+                    - Design: <a href="https://templatemo.com" rel="sponsored" target="_parent"
+                        title="css templates">TemplateMo</a>
+                </footer>
 
         </main>
     </div>
