Gallery- add pictures to gallery

--- a/modified/misc/gallery.html
+++ b/modified/misc/gallery.html
@@ -137,49 +137,50 @@ https://templatemo.com/tm-542-new-vision
                 <!-- Carousel -->
                 <div class="grid tm-carousel">
                     <figure class="effect-honey">
-                        <img src="img/gallery-item-01.jpg" alt="Featured Item">
+                        <img src="../media/2-nuns.jpg" alt="Featured Item">
                         <figcaption>
                             <h4><i><span>Caption</span> if possible</i></h4>
                         </figcaption>
                     </figure>
                     <figure class="effect-honey">
-                        <img src="img/gallery-item-02.jpg" alt="Featured Item">
+                        <img src="../media/nuns-on-bench.jpg" alt="Featured Item">
                         <figcaption>
                             <h4><i><span>Caption</span> if possible</i></h4>
                         </figcaption>
                     </figure>
                     <figure class="effect-honey">
-                        <img src="img/gallery-item-03.jpg" alt="Featured Item">
+                        <img src="../media/laughing-nun.jpg" alt="Featured Item">
                         <figcaption>
                             <h4><i><span>Caption</span> if possible</i></h4>
                         </figcaption>
                     </figure>
                     <figure class="effect-honey">
-                        <img src="img/gallery-item-04.jpg" alt="Featured Item">
+                        <img src="../media/nun-story-2.jpeg" alt="Featured Item">
+                        <figcaption>
+                            <h4><i><span>Caption</span> if possible</i></h4>
+                        </figcaption>
+                    </figure>
+
+                    <figure class="effect-honey">
+                        <img src="../media/nuns-on-grass.jpg" alt="Featured Item">
                         <figcaption>
                             <h4><i><span>Caption</span> if possible</i></h4>
                         </figcaption>
                     </figure>
                     <figure class="effect-honey">
-                        <img src="img/gallery-item-05.jpg" alt="Featured Item">
+                        <img src="../media/smiling-nun.jpg" alt="Featured Item">
                         <figcaption>
                             <h4><i><span>Caption</span> if possible</i></h4>
                         </figcaption>
                     </figure>
                     <figure class="effect-honey">
-                        <img src="img/gallery-item-06.jpg" alt="Featured Item">
+                        <img src="../media/nuns-seated-inside.jpeg" alt="Featured Item">
                         <figcaption>
                             <h4><i><span>Caption</span> if possible</i></h4>
                         </figcaption>
                     </figure>
                     <figure class="effect-honey">
-                        <img src="img/gallery-item-07.jpg" alt="Featured Item">
-                        <figcaption>
-                            <h4><i><span>Caption</span> if possible</i></h4>
-                        </figcaption>
-                    </figure>
-                    <figure class="effect-honey">
-                        <img src="img/gallery-item-08.jpg" alt="Featured Item">
+                        <img src="../media/gate.jpg" alt="Featured Item">
                         <figcaption>
                             <h4><i><span>Caption</span> if possible</i></h4>
                         </figcaption>
